Fix alignment of wrapped lines in app list

--- a/site/app/stylesheets/partials/_page.scss
+++ b/site/app/stylesheets/partials/_page.scss
@@ -1408,6 +1408,9 @@ li.captcha {
           text-align: right;
           margin-right: 1em;
         }
+        dd {
+          margin-left: 11em;
+        }
         dd.app_type {
           text-transform: uppercase;
         }
